[project]
name = "ekans-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinxawesome-theme>=5.3.2",
    "sphinxcontrib-confluencebuilder>=2.15.0",
]
